# OpenGL-Voxel

./: CMakeLists.txt  UpdateMain  compile_commands.json  run
.cache/clangd/index/: Camera.hpp.EAA2894F27912946.idx  Engine.hpp.7BAA1DC1307579EE.idx  Shader.hpp.DDCDB9893F382EE9.idx  ShaderTextureInterface.hpp.51A18AA868A6B044.idx  Texture.hpp.3912CB251CC33716.idx  TimeManager.hpp.93E13FB4ACD8CF3C.idx  VoxelBuffer.hpp.58AD1B04879F50D4.idx  VoxelData.hpp.710C1F2220755D32.idx  WindowManager.cpp.D072AF19C7ED7BBB.idx  WindowManager.hpp.8F1BD26A63AC7D50.idx  WorldBuffer.hpp.C84BBEE49C09201E.idx  glad.h.9D32EC32CE3379A0.idx  main.cpp.BF84451741734B83.idx  stb_image.h.6C4A20785C318728.idx
LearnOpenGlExamples/: .Main.cpp.kate-swp  Main.cpp
include/: Camera.hpp  Engine.hpp  Shader.hpp  Texture.hpp  TimeManager.hpp  VoxelBuffer.hpp  VoxelData.hpp  WindowManager.hpp  WorldBuffer.hpp  WorldManager.hpp
include/Interfaces/: ShaderTextureInterface.hpp
include/glad/: glad.h
shaders/: baseFragment.frag  baseVertex.vert
src/: CMakeLists.txt  Engine.cpp  WindowManager.cpp  glad.c  main.cpp  stbInit.cpp
